Fix compile error on Java 11